# core-ui

./: .gitignore  CMakeLists.txt  LICENSE  README-en.md  README.md  UI_CORE_API.md  VERSION  llms.txt  version.json
.github/workflows/: deploy-pages.yml
cmake/: UiCoreHelpers.cmake  embed_binary.cmake  embed_text.cmake
demo/: ui_demo.uix  ui_demo_uix.cpp
demo/lang/: ui_demo_en.lang  ui_demo_zh.lang
docs/: ai-guide.md  c-api.md  controls.md  debug-simulation.md  design-system.md  getting-started.md  html-ui-plan.md  i18n.md  layout.md  markup.md  uix-guide.md
include/: plugin_api.h  ui_core.h
src/: version.rc.in
src/ui/: animation.cpp  animation.h  asset.cpp  asset.h  builder.h  context_menu.cpp  context_menu.h  controls.cpp  controls.h  event.h  handle_table.cpp  handle_table.h  image_source.cpp  image_source.h  image_source_bitmap.cpp  image_source_gif.cpp  image_source_svg.cpp  image_source_tiled.cpp  image_view_gdi.cpp  image_view_gdi.h  image_view_plus.cpp  image_view_plus.h  msgbox.cpp  msgbox.h  renderer.cpp  renderer.h  theme.h  ui.h  ui_api.cpp  ui_context.cpp  ui_context.h  ui_debug.cpp  ui_debug.h  ui_debug_server.cpp  ui_debug_server.h  ui_window.cpp  ui_window.h  widget.cpp  widget.h
src/ui/css/: cascade.cpp  cascade.h  css_ast.h  css_parser.cpp  css_parser.h  selector.cpp  selector.h  value.cpp  value.h
src/ui/expression/: json.cpp  json.h  value.h
src/ui/flex/: flex.cpp  flex.h
src/ui/markup/: markup.cpp  markup.h  markup_api.cpp  markup_builder.cpp  markup_builder.h  markup_parser.cpp  markup_parser.h
src/ui/page/: compiled_page.h  compiler.cpp  compiler.h  page_api.cpp  page_state.cpp  page_state.h  svg_widget.cpp  svg_widget.h  widget_factory.cpp  widget_factory.h
src/ui/reactive/: binding.cpp  binding.h  property.h
src/ui/uix/: expr_rewriter.cpp  expr_rewriter.h  script_runtime.cpp  script_runtime.h  sfc_parser.cpp  sfc_parser.h  template_ast.h  template_parser.cpp  template_parser.h  value_convert.cpp  value_convert.h
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  ThemeContext.ts  index.css  main.tsx  theme.ts
website/src/components/: CodeBlock.tsx  ControlCard.tsx  ControlPreview.tsx  FeatureCard.tsx  Header.tsx  Layout.tsx  SearchDialog.tsx  Sidebar.tsx
website/src/data/: ai-skill.ts  api-functions.ts  controls.ts  features.ts  uix-ai-guide.md
website/src/i18n/: en.ts  index.ts  zh-CN.ts
website/src/pages/: AiGuide.tsx  CApi.tsx  ControlDetail.tsx  Controls.tsx  Debug.tsx  DesignSystem.tsx  GettingStarted.tsx  Home.tsx  LayoutDoc.tsx  Markup.tsx
